# django-tubokotu

./: .gitignore  Procfile  README.md  build_files.sh  pyproject.toml  vercel.json
bookproject/: .gitignore  requirements.txt  settings.py  wsgi.py
bookproject/accounts/: forms.py  urls.py  views.py
bookproject/accounts/templates/accounts/: signup.html
bookproject/book/: consts.py  models.py  urls.py  views.py
bookproject/book/migrations/: 0002_auto_20220123_0226.py  0003_review.py  0004_book_thumbnail.py  0005_book_user.py
bookproject/book/templates/book/: book_list.html  index.html
bookproject/bookproject/: settings.py  urls.py
bookproject/templates/: base.html
bookproject/templates/registration/: login.html
helloworldproject/: manage.py
helloworldproject/helloworldapp/: urls.py
helloworldproject/helloworldproject/: asgi.py  settings.py  views.py  wsgi.py
src/django_tubokotu/bookproject/: start.sh
src/django_tubokotu/bookproject/book/migrations/: 0001_initial.py
src/django_tubokotu/bookproject/book/templates/book/: book_detail.html
src/django_tubokotu/helloworldproject/helloworldapp/: views.py
src/django_tubokotu/helloworldproject/helloworldproject/: urls.py
